syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ot4";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.ot4;

import "google/protobuf/timestamp.proto";

service KeyManagerService {
  rpc register(PixKeyRequest) returns (PixKeyResponse) {}
  rpc remove(RemoveKeyRequest) returns (RemoveKeyResponse) {}
  rpc search(SearchKeyRequest) returns (SearchKeyResponse) {}
  rpc searchAll(SearchAllRequest) returns (SearchAllResponse) {}
}

message SearchAllRequest {
  string externalClientId = 1;
}

message SearchAllResponse {
  message PixDetails {
    string pixId = 1;
    string externalClientId = 2;
    KeyType keyType = 3;
    string key = 4;
    AccountType accountType = 5;
    google.protobuf.Timestamp createdAt = 6;
  }

  repeated PixDetails keys = 1;
}

message SearchKeyRequest {
  message PixData {
    string externalClientId = 1;
    string pixId = 2;
  }
  oneof pixFilter {
    PixData pixData = 1;
    string key = 2;
  }
}

message SearchKeyResponse {
  string pixId = 1;
  string externalClientId = 2;
  KeyType keyType = 3;
  string key = 4;
  string ownerName = 5;
  string ownerCpf = 6;
  AccountData accountData = 7;
  google.protobuf.Timestamp createdAt = 8;
}

message AccountData {
  string organizationName = 1;
  string branch = 2;
  string accountNumber = 3;
  AccountType accountType = 4;
}

enum KeyType {
  UNKNOW_KEY_TYPE = 0;
  CPF = 1;
  PHONE_NUMBER = 2;
  EMAIL = 3;
  RANDOM_KEY = 4;
}

enum AccountType {
  UNKNOW_ACCOUNT_TYPE = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message PixKeyRequest {
  string externalClientId = 1;
  string pixKey = 2;
  KeyType keyType = 3;
  AccountType accountType = 4;
}

message PixKeyResponse {
  string pixId = 1;
}

message RemoveKeyRequest {
  string pixId = 1;
  string externalClientId = 2;
}

message RemoveKeyResponse {
  bool success = 1;
}